<resources>
    <string name="app_name">NovapproAndroid</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_layout_tool_bar_title">欢迎使用Novappro</string>
    <string name="login_layout_edit_text_user_id">请输入您的学号/工号</string>
    <string name="login_layout_edit_text_password">请输入您的密码</string>
    <string name="login_layout_button_login_text">登录</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="student_layout_tool_bar_title">学生端</string>
    <string name="title_activity_apply_course">ApplyCourseActivity</string>
    <string name="title_activity_check_course_application">CheckCourseApplicationActivity</string>
    <string name="apply_course_layout_button_take_photo">拍照</string>
    <string name="create_course_application">提交课程申请</string>
    <string name="title_activity_course_application_detail">CourseApplicationDetailActivity</string>
    <string name="course_code">课程代码</string>
    <string name="course_name">课程名称</string>
    <string name="serial_number">课程序号</string>
    <string name="teachers">教师组姓名</string>
    <string name="online_contact_way">线上联系方式</string>
    <string name="comment">备注</string>
    <string name="your_approvals">您的审批</string>
    <string name="title_activity_check_approval_detail">CheckApprovalDetailActivity</string>
    <string name="title_activity_system_user_management">SystemUserManagementActivity</string>
    <string name="title_activity_course_management">CourseManagementActivity</string>
    <string name="title_activity_user_management">UserManagementActivity</string>
    <string name="title_activity_approval_flow_query">ApprovalFlowQueryActivity</string>
    <string name="user_id">学号/工号</string>
    <string name="user_username">姓名</string>
    <string name="user_user_type">用户类型</string>
    <string name="title_activity_modify_user">ModifyUserActivity</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="title_activity_modify_course">ModifyCourseActivity</string>
    <string name="course_credit">学分</string>
    <string name="title_activity_add_course">AddCourseActivity</string>
    <string name="approval_flow_flow_no">流水号</string>
    <string name="approval_flow_appro_status">当前审批状态</string>
    <string name="approval_flow_title">标题</string>
    <string name="approval_flow_bus_type">审批流拓扑结构</string>
    <string name="approval_flow_add_time">申请发起时间</string>
    <string name="approval_flow_add_user_id">申请人ID</string>
    <string name="approval_flow_add_remark">申请原因</string>
    <string name="title_activity_my">MyActivity</string>
</resources>