<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/course_item_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_course_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/course_code">
    </TextView>

    <TextView
        android:id="@+id/text_view_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/course_name">
    </TextView>

    <TextView
        android:id="@+id/text_view_course_serial_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/serial_number">
    </TextView>

    <TextView
        android:id="@+id/text_view_teachers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/teachers">
    </TextView>

    <TextView
        android:id="@+id/text_view_course_online_contact_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/online_contact_way">
    </TextView>

    <TextView
        android:id="@+id/text_view_course_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/comment">
    </TextView>

</LinearLayout>