<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="修改用户">

    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_id">
        </TextView>
        <TextView
            android:id="@+id/text_view_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_username">
        </TextView>
        <EditText
            android:id="@+id/edit_text_user_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_view_user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_user_type">

        </TextView>
        <RadioGroup
            android:id="@+id/radio_group_user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/button_confirm_modify_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="确认修改">

        </Button>
        <Button
            android:id="@+id/button_confirm_delete_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="删除用户">

        </Button>
        <Button
            android:id="@+id/button_cancel_modify_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="放弃修改">
        </Button>
        <Button
            android:id="@+id/button_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="重置密码">
        </Button>
    </LinearLayout>
</LinearLayout>